# ChangeLog for net-misc/dropbear
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dropbear/ChangeLog,v 1.125 2015/04/26 18:22:34 zlogene Exp $

  26 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> dropbear-2014.66.ebuild:
  amd64 stable wrt bug #535598

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> dropbear-2014.66.ebuild:
  ppc stable wrt bug #535598

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> dropbear-2014.66.ebuild:
  x86 stable wrt bug #535598

  26 Apr 2015; Jeroen Roovers <jer@gentoo.org> dropbear-2014.66.ebuild:
  Stable for HPPA (bug #535598).

*dropbear-2015.67 (15 Feb 2015)

  15 Feb 2015; Mike Frysinger <vapier@gentoo.org> +dropbear-2015.67.ebuild:
  Version bump.

*dropbear-2014.66 (23 Oct 2014)

  23 Oct 2014; Mike Frysinger <vapier@gentoo.org> +dropbear-2014.66.ebuild:
  Version bump.

*dropbear-2014.65 (09 Aug 2014)

  09 Aug 2014; Mike Frysinger <vapier@gentoo.org> +dropbear-2014.65.ebuild:
  Version bump.

  30 May 2014; Mike Frysinger <vapier@gentoo.org> files/dropbear.init.d:
  Generate keys for all types dropbear supports.

*dropbear-2014.63 (10 Mar 2014)

  10 Mar 2014; Mike Frysinger <vapier@gentoo.org> +dropbear-2014.63.ebuild:
  Version bump.

  31 Dec 2013; Tim Harder <radhermit@gentoo.org> -dropbear-2012.55.ebuild,
  -dropbear-2013.56.ebuild, -dropbear-2013.57.ebuild, -dropbear-2013.58.ebuild,
  -files/dropbear-0.53.1-link.patch:
  Remove old, vulnerable versions (bug #487682).

  22 Dec 2013; Mike Frysinger <vapier@gentoo.org> dropbear-2013.60.ebuild:
  Add multicall install fixes to stable version too.

  09 Dec 2013; Mike Frysinger <vapier@gentoo.org>
  +files/dropbear-2013.62-multi-install-man.patch,
  +files/dropbear-2013.62-multi-no-relink.patch, dropbear-2013.62.ebuild:
  Fix build/install when USE=multicall.

  09 Dec 2013; Mike Frysinger <vapier@gentoo.org> dropbear-2013.60.ebuild,
  dropbear-2013.62.ebuild:
  Fix symlink install when USE=multicall #493270 by Lars.
