@@ -4,11 +4,11 @@ DESCRIPTION=small SSH 2 client/server designed for small memory environments
 EAPI=4
 HOMEPAGE=http://matt.ucc.asn.au/dropbear/dropbear.html
 IUSE=bsdpty minimal multicall pam +shadow static syslog zlib savedconfig
-KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~m68k ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-linux ~x86-linux
+KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~amd64-linux ~x86-linux
 LICENSE=MIT
 RDEPEND=!static? ( zlib? ( sys-libs/zlib ) dev-libs/libtommath ) pam? ( virtual/pam ) pam? ( >=sys-auth/pambase-20080219.1 )
 REQUIRED_USE=pam? ( !static )
 SLOT=0
 SRC_URI=http://matt.ucc.asn.au/dropbear/releases/dropbear-2014.66.tar.bz2 http://matt.ucc.asn.au/dropbear/testing/dropbear-2014.66.tar.bz2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	portability	a45c088f246ef5091e029f6285d7ce42	savedconfig	5313100f525c41f6c72c6e04edeb4f65	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=2a293498e7aa6d060ae4a3b2a2fa9131
+_md5_=b231e3ca4e3e061384789f1a8cc997eb
