@@ -3,10 +3,10 @@ DEPEND=app-arch/xz-utils >=sys-apps/sed-4
 DESCRIPTION=Fallback theme for the freedesktop icon theme specification
 EAPI=5
 HOMEPAGE=http://icon-theme.freedesktop.org/wiki/HicolorTheme
-KEYWORDS=alpha amd64 ~arm ~arm64 hppa ia64 ~mips ppc ~ppc64 ~sh sparc x86 ~amd64-fbsd ~x86-fbsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=alpha amd64 ~arm ~arm64 hppa ia64 ~mips ppc ppc64 ~sh sparc x86 ~amd64-fbsd ~x86-fbsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-2
 RESTRICT=binchecks strip
 SLOT=0
 SRC_URI=http://icon-theme.freedesktop.org/releases/hicolor-icon-theme-0.15.tar.xz
 _eclasses_=gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=ef2807d314333212b893dca43776cd33
+_md5_=a8eb86e59623021d0f193fa85ac4d254
