@@ -16,16 +16,14 @@ EBUILD dropbear-2013.60.ebuild 2790 SHA256 eb6186e0da4ce5927cd756bce78aaa830e675
 EBUILD dropbear-2013.62.ebuild 2801 SHA256 0aba1514fdb1223a568a7e7704aaed287cb141c6c8280297051255b57bdccac4 SHA512 03d1d1dbc8bdc4ae6b9e30fc65793068faecc5fe0a84c8b8f139df2cd72e8e0ba167216fb780d72c4e2425ecdb1a02b3fa50f4a5c173de2b0af7486c739422c5 WHIRLPOOL 0cc42bc64eb0245d4a2d5659601b0ce0acbd1c1b5af989c52424dca14c39bbdfe215a8f83bd5cfacfebd7f8bc320b6d9623c29a8cf9074299d75f158b39e9c58
 EBUILD dropbear-2014.63.ebuild 2684 SHA256 c14ddbf3050655fb05cdf2b8a26678b92065c7639cbb6a49e150daac43ac44e8 SHA512 e59bc5fd68243695be0d6d73d6b18c7de3091726104df20a9853f31e641a979a519aa89965606becf17d7979a58406e80d1e13f3fd185f4ae556d85ea949597e WHIRLPOOL 72fd91f3b03869d545d0241f2f7b0387ef270dd8680d3eaa7d47974e8f996c781d73271a91391c7b7147ec99dbea3c38520c8457c8567cf8818091efde79e4c4
 EBUILD dropbear-2014.65.ebuild 2597 SHA256 d1abc3f019b978165332f14d7e5a1cbb13bb5f9734fa067e3826f5b23778ec30 SHA512 1fedea9d482a9580389a8426332ec53665c2e048af44c46abb5fcbb9cb970ddf4ec90267c892d59a0803409fc688fa9f5802be6593c63751ad02e29dffaaf4c1 WHIRLPOOL 37a0bc3fa0cf59c0540a4b4b27447a26629479a07a12ec72db0120f92ee5147b44303cebc93af87fff09c9ba4be72e67e6c081c617104cc1dbccb816e3e7edc8
-EBUILD dropbear-2014.66.ebuild 2601 SHA256 7b4d0addf80da205a01dadee9dc2312e514fb24eb7644ad47002fd17f10cdb71 SHA512 52e8157f27352d54f74d0f3f12f066f1a6d152cddf621fd420f2e6010fc8868380737dbea59d5e575587cf8199ab7e63cd76fed212834a44a8b2673db2c070b1 WHIRLPOOL fb2b0df917e65f06ec213ec323b344d4e517e02e26b9173474ed5e0901ceab260f75103e564b2f9636944da99fecdd48a818aff87c758d6f990f31b1ea8da2ff
+EBUILD dropbear-2014.66.ebuild 2596 SHA256 9f1641da90b989d0c5c1c53e3ff54f31c14696060849a0fe90f990bef9fa37b9 SHA512 218fccaf7558eb9cc94c2c9d69f36f29d0778939f7dc3279acecf9218fe697f6efb768127f4c52960f2e271f6321416fb8cf2d09d2b1f30b689f0fc8400b6781 WHIRLPOOL 5c248730d6f5d54e6e7dc0e87b9e0c08fc28d38a337a4ef769fbaeff49e256c43306c86442baf1acd0a92678c7312f1bfcbc7bd8289863902ed8ccad336e74a7
 EBUILD dropbear-2015.67.ebuild 2604 SHA256 3052005c77404604a9e5df6e7afd0f4b773bde5b62f70a93fdecb76b47003e31 SHA512 91d900888ad7e861f6d1cb10c1b6c9fdb7f108f6aec74ad84ddfcdad8226b77f3a377a016c47565334022e5dba9a6b6de942fcc2a86c7eb3c5250388a78d1d88 WHIRLPOOL b5b063b9d69ac10b3b29c7068d1669ebe6d76da62b70b09addfe9ebc3e124d3e89c59f094d3ed87646ef8055e675d0496986ed74790b7265f57430e5de86cd9b
-MISC ChangeLog 16236 SHA256 27e89f96a8f4e8948001f408fdee7ed9d7c258cc3c6c8ca68780d914948a9169 SHA512 4984feb436fdc48dc161ea19d339159ee9f1d21f91fb2760dda8e848a3c408eac3851b003c8a1e722915202887c7e10bbbd4d7fb13277b2c3c1f13e7382841d1 WHIRLPOOL 9689ce54bbf07a974cbc23671827a72507092a600b77b9a5a5cbcf765ee6a8fbf8ffecaad5042e1b4aea664bb50a218483b33098f068bfc47a2a88493def7dc7
+MISC ChangeLog 16339 SHA256 65781364773b80d116189d4b477dd6ac133759ca0c278e73875d83ca2a4c6939 SHA512 c99cd88c4807ed489394a02d841d3e7125c4078712d90e436506ff2f159e9c9b1d1d9f7351791b957f7c402cc2a6efa03a799c7d1bebcd9d7c5a0807558c8e03 WHIRLPOOL ad115dd154d27c79c6caadd7b951da327b03d39f9a6afc341cd8f3eb5376e72bca5f3e946dc9925b846daac75fd6e99b722ef7198fbe6d5f7095117795817dbb
 MISC metadata.xml 1597 SHA256 7004c16f947868bd973e18b32dbae55c891a4714d454ec2ef5e835ddf5e1539b SHA512 9abf8e6dc46448060a76acbca75f90d513c4150b016356eb5bf482814ebcf16bb37a61163f363a61e9fab888d4919c20224f8bb9b2d7764a22515802a17b7260 WHIRLPOOL 9f634eb93008b74dfdf885faff5c05f53c970a1105298acc9f2c5107d321b1a74706a4e42b847d2ba8ea6e84e9b928c598c1380cac613afc0bf806194c7e494f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlU9LHcACgkQG9wOWsQutdalSgQAlS2j3VS63n3JI544h60J6faN
-sW0vuYgPXnBqLtXeIVvU9HwMrPCc+Qx7N0yxO29iwBQu0vYDabFnH78ZkQQQceuJ
-gWp0z+PWHwOO7lTflRaLhmXmbNYVP8zCKdYrXdSN3wmZd7iH2TeWnLN2YFG7iCdy
-IjaFVmX8MmRJPlqiHmo=
-=UStL
+iEYEAREIAAYFAlU/FS8ACgkQVWmRsqeSphNoMACfQSxnL4i6Y8j42tJE3BkpZ7s+
+WQUAn1EhGNdSws/Nt+fZyM7QwAe3Q4oT
+=cLab
 -----END PGP SIGNATURE-----
