@@ -6,15 +6,13 @@ DIST hicolor-icon-theme-0.14.tar.xz 50904 SHA256 7bed06e6ef316318274bda0fdaf39fc
 DIST hicolor-icon-theme-0.15.tar.xz 51056 SHA256 9cc45ac3318c31212ea2d8cb99e64020732393ee7630fa6c1810af5f987033cc SHA512 4ae3cb1d2d1dfc219424d41ffd72323a44e5320117e5e88f81c1629964dd42ab2055c999d0c846f9d8834e7b922b5cec36481e8c82fede6a4e73faf3ac09bd20 WHIRLPOOL a33a9d59f3b9fae944bd5da37f5d47527aa2c83a15c4ac6ae2b32d3533fe3eacd4264228bbf92569b11052a03d6c5d5cc05ea262ae799c558226ab73184bd7f6
 EBUILD hicolor-icon-theme-0.12.ebuild 949 SHA256 384b8c61668fa312e52699cb86e91aa195f393fa46045e7e2deff78e35fdc3ce SHA512 7bf378ada1f3e5468e46bb3f865e3d2a3173a34338fcdde612c45fa01918a74c25be1d0c13fe9eef178c626dd059858d55dd16136b34ac481a4d45e0143300c9 WHIRLPOOL dce5e6e5798c3cb833f5e59cac14040385346b8d48af4341ef494d12464e1c37ff317669e110f27095ad7be47a804c6500d59ea17d477f9f4624a4024d0b731e
 EBUILD hicolor-icon-theme-0.14.ebuild 929 SHA256 8ebf11237e4825969863ee2bfb55c34be2e4e7d3ee16025f35615f1f2c3bfea6 SHA512 2b0102f720cbff421f4bddc74e3dbe9c745bcc1347a75a3aae7ee3de41b98432dfe517f57ad76ac8d33095d7f00d1beecd09cf657beae9243c0a13dae9ebade2 WHIRLPOOL 0a08ccc7c7b208553e2e3a719033218c2f3e0f6941bd2f30f06f3f4cf64735b5f09303542cd30158ee24a82667258d3b9d195d0cf60db840750bbeaea622c88c
-EBUILD hicolor-icon-theme-0.15.ebuild 925 SHA256 439eb5e69197010b7b05485b91d1ee9fcd8a7ad6e443386c9e0bc2385b5a1d57 SHA512 9816ba93078204b35f5f9ca09b7ec4caee5efca7b3971431254314649a0acca3fa5fc7364a4795debdf3f2d110c36e70af4609618f1019d62edf5614f136cede WHIRLPOOL 093c87e43634be20a70755cd89a276321c0d6576ef21a62fcb0a5b723d9bf34e1eaf14ddd221ff03421a0607839bdcd6fa7383625e5ba70edaee52d286e762f2
-MISC ChangeLog 9722 SHA256 8e94e6744e6a1738bc968045bbe2d826167fafc0016cab1e1435d007d36ac65a SHA512 16632a4c0a856afc385b5e5ebf85cbf7c4799c697f5811529bb011d224ba2f1387acd635242307752018cc7d1294faa853d319cc083874881a754a9ed2a0bd80 WHIRLPOOL ed0928efa2c7eb53a02c7341cdd0c597d54c18da069164988ec8a53352399d6efdfe2cccf84b82644798b122138a9037ff655b37d74ccdaf26461ed8f81c6584
+EBUILD hicolor-icon-theme-0.15.ebuild 920 SHA256 3495681c39009d4cfc553e4464f9f133feae220ef4a68ba7090eddc88ef93b8d SHA512 49bca1b65d5d289130fbb415153e7367c766a52e6db4dabc8311a7a42bb024d38da26b3b527dd39a6bf69aa4350ad196e33451a9f5136d0dea7fbc8b82b85dcb WHIRLPOOL bc968724c482710d6e391993383ffb7066992859015e2ca7d17d4b1d7241118ee47deee6f3fbdc0936a9a8c014d4345f32fc4479c8fb2e28312989655e548715
+MISC ChangeLog 9832 SHA256 859053f7d5d74d11839812ddd307f28b8f593a10dbe51e0af02f91b8b0c0294f SHA512 3354de432fee6d6cfc3bc562f6851d9e1ebf922d7162508d348519bf74feac5e0ecd62f034be079e5a57802d07b15063fcb5859df14b51a687762524946dd454 WHIRLPOOL f8508bd97c56efcb21b7fd44ca7fa74187f75325488f4ab5d62c2a9c7f1ef52b21ac7fc43c3d95ca441da1da591cdc08270f8895b2e5a470cc6fa25e67e25a96
 MISC metadata.xml 244 SHA256 552982cb042dce6d0051aef928f3cca7553e6d7327e0556f97f9e6e52e651b6c SHA512 9f697206cf152d13b2a3e26645959ab3353a34e4158832139689359aad999114afb8ed80e2f82464674f358434a891d74f2e94079c2c57fc7a125d17e735ff71 WHIRLPOOL 47f92e411c189c765f6665e28402aa0411ebe898b306925cf395ed23085738120fb4075682d6c86f5818de5a3d70cfeca2fda163e3eb83764ba0b4d8dce1fb04
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlU86DcACgkQG9wOWsQutdZK2AQAiMr+Dv7P7FdZkO0d8aYUy+U6
-5sYb02QGr2CmNPJV69R+JxXZuKKXzznnPLNFz8KqoHwsvXI8Imp13yr6lKG2zxJO
-O1W5hesklVnzNpec4/wtH1KwcgExppv/6wreXn8LcPUulinP8k2U2iR/w2Bwhvm8
-8in9rf+ikb4YjGwxK2s=
-=NlZm
+iEYEAREIAAYFAlU/FIIACgkQVWmRsqeSphMfeACdGottIyQYmE7aTPy82j/xbmwi
+7i8An1k9w9IOQI4LB6lnG7lpkH1srgn3
+=2f6l
 -----END PGP SIGNATURE-----
